--- a/css/youthforsafety.css
+++ b/css/youthforsafety.css
@@ -27,11 +27,12 @@ a:hover {
 html,
 body {
   height: 100%;
-  /*background-color: #333;*/
+  /*background-color: #fff;*/
   background-color: #64A1DA;
+  /*background-image:url('../images/y4s1.jpg');*/
   /*#64A1DA blue*/
-  #ECF214
-  #ffff00
+  /*#ECF214
+  #ffff00*/
 }
 body {
   color: #fff;
@@ -111,7 +112,7 @@ body {
  */
 
 .cover {
-  padding: 0 20px;
+  padding: 0 0px;
 }
 .cover .btn-lg {
   padding: 10px 20px;
