--- a/css/youthforsafety.css
+++ b/css/youthforsafety.css
@@ -29,7 +29,9 @@ body {
   height: 100%;
   /*background-color: #fff;*/
   background-color: #64A1DA;
-  /*background-image:url('../images/y4s1.jpg');*/
+  background-image:url('../images/y4sAddMe.jpg');
+  background-size: cover;
+    background-repeat: no-repeat;
   /*#64A1DA blue*/
   /*#ECF214
   #ffff00*/
