--- a/css/youthforsafety.css
+++ b/css/youthforsafety.css
@@ -29,7 +29,8 @@ body {
   height: 100%;
   /*background-color: #fff;*/
   background-color: #64A1DA;
-  background-image:url('../images/y4sAddMe.jpg');
+  /*background-image:url('../images/y4sAddMe.jpg');*/
+  background-image:url('../images/bcground.jpg');  
   background-size: cover;
     background-repeat: no-repeat;
   /*#64A1DA blue*/
