--- a/css/youthforsafety.css
+++ b/css/youthforsafety.css
@@ -30,7 +30,7 @@ body {
   /*background-color: #fff;*/
   background-color: #64A1DA;
   /*background-image:url('../images/y4sAddMe.jpg');*/
-  background-image:url('../images/bcground.jpg');  
+  background-image:url('../images/refinedBckg.jpg');
   background-size: cover;
     background-repeat: no-repeat;
   /*#64A1DA blue*/
