--- a/css/youthforsafety.css
+++ b/css/youthforsafety.css
@@ -76,6 +76,7 @@ body {
     background: rgb(255, 255, 255) transparent;
     /* RGBa with 0.6 opacity */
     background: rgba(255, 255, 255, 0.2);
+    padding: 10px 10px;
     /* For IE 5.5 - 7*/
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
     /* For IE 8*/
