changed background image to refined slogan image

--- a/css/youthforsafety.css
+++ b/css/youthforsafety.css
@@ -36,7 +36,8 @@ body {
   background-size: cover;
   background-repeat: no-repeat;*/
 
-  background: url('../images/testHD3.jpg') no-repeat center center fixed; 
+  /*background: url('../images/testHD3.jpg') no-repeat center center fixed; */
+  background: url('../images/refinedbckgy4s.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
