--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,14 @@ img.grayscale {
   font-size: 35px;
 }
 
+
+.pugs1 {
+  vertical-align: middle;
+  width:100%;
+  /*padding-top:4%;*/
+  text-align:center;
+}
+
 .connect {
   background-color: #1B1F23;
   padding-top:7%;
